# python-flit-cookiecutter

./: README.md  cookiecutter.json  pyproject.toml
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tasks.py
