[project]
name = "flit-cookiecutter"
authors = [
    {name = "Bertold Sedlak", email = "" }
]
readme = "README.md"
requires-python = ">=3"
dynamic = ["version"]

dependencies = [
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "invoke",
    "pip-tools",
    "ruff",
    "bumpver",
]

[project.urls]
Source = "python-flit-cookiecutter"

[tool.black]
line-length = 120
target-version = ['py39']
ignore = "E203"
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

[tool.isort]
profile = "black"


[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.bumpver]
current_version = "2023.1002-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
